// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword Screen can render initially with a disabled button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForgotPasswordScreen
    forgotPasswordError={null}
    forgotPasswordSuccess={false}
    navigation={
      Object {
        "pop": [Function],
      }
    }
    sendPasswordReset={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backButtonOnPress": [Function],
      "children": Array [
        <C360EmailInputField
          dark={true}
          leftIcon="jbh-Contact_Mail"
          onChangeText={[Function]}
          onValidationUpdate={[Function]}
          placeHolderText="Email address"
          style={
            Object {
              "marginTop": 44,
            }
          }
          value=""
        />,
        <Styled(Button)
          block={true}
          disabled={true}
          large={true}
          onPress={[Function]}
          primaryDark={true}
          style={
            Object {
              "marginTop": 56,
            }
          }
          testID="forgotPassword_requestButton"
          virtual={undefined}
        >
          <Styled(Text)
            virtual={undefined}
          >
            Request
          </Styled(Text)>
        </Styled(Button)>,
      ],
      "descriptionText": "Please enter the email address associated to your account to request a password reset. Check that email account for further instructions.",
      "headerText": "Forget your password?",
      "showBackButton": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dark": true,
          "leftIcon": "jbh-Contact_Mail",
          "onChangeText": [Function],
          "onValidationUpdate": [Function],
          "placeHolderText": "Email address",
          "style": Object {
            "marginTop": 44,
          },
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": true,
          "children": <Styled(Text)
            virtual={undefined}
          >
            Request
          </Styled(Text)>,
          "disabled": true,
          "large": true,
          "onPress": [Function],
          "primaryDark": true,
          "style": Object {
            "marginTop": 56,
          },
          "testID": "forgotPassword_requestButton",
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Request",
            "virtual": undefined,
          },
          "ref": null,
          "rendered": "Request",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backButtonOnPress": [Function],
        "children": Array [
          <C360EmailInputField
            dark={true}
            leftIcon="jbh-Contact_Mail"
            onChangeText={[Function]}
            onValidationUpdate={[Function]}
            placeHolderText="Email address"
            style={
              Object {
                "marginTop": 44,
              }
            }
            value=""
          />,
          <Styled(Button)
            block={true}
            disabled={true}
            large={true}
            onPress={[Function]}
            primaryDark={true}
            style={
              Object {
                "marginTop": 56,
              }
            }
            testID="forgotPassword_requestButton"
            virtual={undefined}
          >
            <Styled(Text)
              virtual={undefined}
            >
              Request
            </Styled(Text)>
          </Styled(Button)>,
        ],
        "descriptionText": "Please enter the email address associated to your account to request a password reset. Check that email account for further instructions.",
        "headerText": "Forget your password?",
        "showBackButton": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dark": true,
            "leftIcon": "jbh-Contact_Mail",
            "onChangeText": [Function],
            "onValidationUpdate": [Function],
            "placeHolderText": "Email address",
            "style": Object {
              "marginTop": 44,
            },
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "block": true,
            "children": <Styled(Text)
              virtual={undefined}
            >
              Request
            </Styled(Text)>,
            "disabled": true,
            "large": true,
            "onPress": [Function],
            "primaryDark": true,
            "style": Object {
              "marginTop": 56,
            },
            "testID": "forgotPassword_requestButton",
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Request",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Request",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ForgotPassword Screen can render with a disabled button when it has an email 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForgotPasswordScreen
    forgotPasswordError={null}
    forgotPasswordSuccess={false}
    navigation={
      Object {
        "pop": [Function],
      }
    }
    sendPasswordReset={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "backButtonOnPress": [Function],
      "children": Array [
        <C360EmailInputField
          dark={true}
          leftIcon="jbh-Contact_Mail"
          onChangeText={[Function]}
          onValidationUpdate={[Function]}
          placeHolderText="Email address"
          style={
            Object {
              "marginTop": 44,
            }
          }
          value="test@test.com"
        />,
        <Styled(Button)
          block={true}
          disabled={false}
          large={true}
          onPress={[Function]}
          primaryDark={true}
          style={
            Object {
              "marginTop": 56,
            }
          }
          testID="forgotPassword_requestButton"
          virtual={undefined}
        >
          <Styled(Text)
            virtual={undefined}
          >
            Request
          </Styled(Text)>
        </Styled(Button)>,
      ],
      "descriptionText": "Please enter the email address associated to your account to request a password reset. Check that email account for further instructions.",
      "headerText": "Forget your password?",
      "showBackButton": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dark": true,
          "leftIcon": "jbh-Contact_Mail",
          "onChangeText": [Function],
          "onValidationUpdate": [Function],
          "placeHolderText": "Email address",
          "style": Object {
            "marginTop": 44,
          },
          "value": "test@test.com",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": true,
          "children": <Styled(Text)
            virtual={undefined}
          >
            Request
          </Styled(Text)>,
          "disabled": false,
          "large": true,
          "onPress": [Function],
          "primaryDark": true,
          "style": Object {
            "marginTop": 56,
          },
          "testID": "forgotPassword_requestButton",
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Request",
            "virtual": undefined,
          },
          "ref": null,
          "rendered": "Request",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "backButtonOnPress": [Function],
        "children": Array [
          <C360EmailInputField
            dark={true}
            leftIcon="jbh-Contact_Mail"
            onChangeText={[Function]}
            onValidationUpdate={[Function]}
            placeHolderText="Email address"
            style={
              Object {
                "marginTop": 44,
              }
            }
            value="test@test.com"
          />,
          <Styled(Button)
            block={true}
            disabled={false}
            large={true}
            onPress={[Function]}
            primaryDark={true}
            style={
              Object {
                "marginTop": 56,
              }
            }
            testID="forgotPassword_requestButton"
            virtual={undefined}
          >
            <Styled(Text)
              virtual={undefined}
            >
              Request
            </Styled(Text)>
          </Styled(Button)>,
        ],
        "descriptionText": "Please enter the email address associated to your account to request a password reset. Check that email account for further instructions.",
        "headerText": "Forget your password?",
        "showBackButton": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dark": true,
            "leftIcon": "jbh-Contact_Mail",
            "onChangeText": [Function],
            "onValidationUpdate": [Function],
            "placeHolderText": "Email address",
            "style": Object {
              "marginTop": 44,
            },
            "value": "test@test.com",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "block": true,
            "children": <Styled(Text)
              virtual={undefined}
            >
              Request
            </Styled(Text)>,
            "disabled": false,
            "large": true,
            "onPress": [Function],
            "primaryDark": true,
            "style": Object {
              "marginTop": 56,
            },
            "testID": "forgotPassword_requestButton",
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Request",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Request",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
